--- a/03.02.01/css/style.css
+++ b/03.02.01/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "Font Awesome 5";
+    font-weight: 400;
+    font-style: normal;
+    src:url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?v=4.3.0");
+    src:url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0") format("embedded-opentype"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff?v=4.3.0") format("woff"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg");
+}
+
 * { 
     margin: 0;
     padding: 0;
@@ -10,8 +22,10 @@
 li{
 
     display: inline-block;
-    width: 20%;
+    width: 30%;
     padding-top: 3rem;
+    font-size: 1.3rem;
+    padding-left: 1rem;
     
 }
 a{
@@ -21,4 +35,52 @@ a{
 
 body{
     background-color: #D3D3D3;
+}
+
+h1{
+    text-align: center;
+    font-size: 3rem;
+}
+
+a[rel="next"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f055";
+}
+a[rel="tag"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f217";
+}
+a[rel="bookmark"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f005";
+}
+a[rel="help"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f1c1";
+}
+a[rel="search"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f002";
+}
+a[rel="nofollow"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f3ed";
+}
+a[value^="ayuda"]::before{
+    padding-right: 2px;
+    font-family: "Font Awesome 5";
+    display: inline-block;
+	content: "\f217";
 }
