--- a/MyIES/scss/_menu.scss
+++ b/MyIES/scss/_menu.scss
@@ -4,4 +4,56 @@ header{
     @include colors;
     padding: 12px 30px;
     font-size: 1.8em;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px #aaa;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+body {
+    padding: 0px;
+    margin: 0px;
+}
+
+nav {
+    position: absolute;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+}
+
+nav>ul {
+    width: 100%;
+    height: 32px;
+    @include colors;
+}
+
+li.categoria {
+    float: left;
+}
+
+nav a {
+    @include colors;
+    text-decoration: none;
+    width: 160px;
+    padding: 7px 20px;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+}
+
+nav a:hover {
+    @include colors;
+    @include animation(iluminar,0.4,linear);
+}
+
+ul.submenu {
+    @include transition(height,0.5,ease-out);
+    position: absolute;
+    height: 0px;
+    overflow: hidden;
 }
