--- a/MyIES/scss/css/screen.css
+++ b/MyIES/scss/css/screen.css
@@ -4,4 +4,63 @@ header {
   background-color: #666;
   padding: 12px 30px;
   font-size: 1.8em;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px #aaa;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
+nav {
+  position: absolute;
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+nav > ul {
+  width: 100%;
+  height: 32px;
+  color: #eee;
+  background-color: #666;
+}
+
+li.categoria {
+  float: left;
+}
+
+nav a {
+  color: #eee;
+  background-color: #666;
+  text-decoration: none;
+  width: 160px;
+  padding: 7px 20px;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
+
+nav a:hover {
+  color: #eee;
+  background-color: #666;
+  -moz-animation: iluminar 0.4 linear;
+  -webkit-animation: iluminar 0.4 linear;
+  -o-animation: iluminar 0.4 linear;
+}
+
+ul.submenu {
+  -moz-transition: height 0.5 ease-out;
+  -webkit-transition: height 0.5 ease-out;
+  -o-transition: height 0.5 ease-out;
+  position: absolute;
+  height: 0px;
+  overflow: hidden;
 }/*# sourceMappingURL=screen.css.map */
