--- a/MyIES/scss/_menu.scss
+++ b/MyIES/scss/_menu.scss
@@ -1,59 +1,62 @@
-header{
 
-    height: 100px;
-    @include colors;
-    padding: 12px 30px;
-    font-size: 1.8em;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px #aaa;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+@keyframes iluminar {
+    from {
+        @include colors;
+    }
+    to {
+        @include colorHover;
+    }
 }
 
-body {
-    padding: 0px;
-    margin: 0px;
-}
-
-nav {
+nav{
     position: absolute;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-}
+    ul{
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+    }
+    >ul{
+        width: 100%;
+        height: 32px;
+        @include colors;
+    }
+    a{
+        @include colors;
+        text-decoration: none;
+        width: 160px;
+        padding: 7px 20px;
+        display: block;
+        text-align: center;
+        cursor: pointer;
+        &:hover{
 
-nav ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-}
-
-nav>ul {
-    width: 100%;
-    height: 32px;
-    @include colors;
+            @include colors;
+            @include animation(iluminar, 0.4s,linear);
+        }
+    }
 }
 
 li.categoria {
     float: left;
-}
 
-nav a {
-    @include colors;
-    text-decoration: none;
-    width: 160px;
-    padding: 7px 20px;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-}
+    >a {
+        @include transition(padding, 0.4s, ease-out);
+    }
 
-nav a:hover {
-    @include colors;
-    @include animation(iluminar,0.4,linear);
+    &:hover{
+        padding: 10px 20px;
+
+        ul.submenu {
+            height: 100px;
+        }
+    }
 }
 
 ul.submenu {
-    @include transition(height,0.5,ease-out);
-    position: absolute;
+    @include transition(height,0.5s,ease-out);
+    position:absolute;
     height: 0px;
     overflow: hidden;
 }
