--- a/MyIES/scss/screen.scss
+++ b/MyIES/scss/screen.scss
@@ -11,33 +11,60 @@ $backColorElementListHover:#888;
 
 @mixin colorHover{
 
-    &:hover{
-
-        color:$textColorHover;
-        background-color: $backColorElementListHover;
-    }
+    color:$textColorHover;
+    background-color: $backColorElementListHover;
+    
 }
 
 @mixin changeBoxSizing($size) {
     
+    box-sizing: $size;
     -webkit-box-sizing: $size;
     -moz-box-sizing: $size;
     -moz-box-sizing: $size;
-    box-sizing: $size;
+    
 }
 
 @mixin transition($property,$duration,$timing:linear){
 
+    transition: $property $duration $timing;
     -moz-transition: $property $duration $timing;
     -webkit-transition: $property $duration $timing;
     -o-transition: $property $duration $timing;
+    
 }
 
 @mixin animation($name,$duration,$timing:linear){
 
+    animation:$name $duration $timing;
     -moz-animation: $name $duration $timing;
-    -webkit-animation: $name $duration $timing;
+    -webkit-animation:$name $duration $timing;
     -o-animation: $name $duration $timing;
+    
 }
 
 @import "_menu";
+
+header{
+
+    @include colors;
+    padding: 12px 30px;
+    font-size: 1.8em;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px #aaa;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+body {
+    padding: 0px;
+    margin: 0px;
+    @include changeBoxSizing(border-box);
+}
+
+footer {
+    @include colors;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    padding: 5px;
+}
