--- a/04.04. Actividad 3/estilos.css
+++ b/04.04. Actividad 3/estilos.css
@@ -30,6 +30,7 @@ header{
     border-top: 2px black;
     display: flex;
     flex-direction: row;
+    align-content: space-around;
 }
 
 nav{
@@ -45,7 +46,15 @@ nav div{
 
 main{
 
+    height: 1000px;
+    width: 650px;
+    text-align: center;
     
+}
+
+main p{
+
+    margin: auto;
 }
 
 article{
